# privacy-preserving-agent-finetuner

./: .cz.toml  .dockerignore  .editorconfig  .env.example  .env.production  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .sonarcloud.properties  .trivyignore  ADVANCED_OPTIMIZATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  IMPLEMENTATION_STATUS.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_BREAKTHROUGH_RESEARCH_SUMMARY.md  QUICK_START_TUTORIAL.md  README.md  REPRODUCIBLE_BUILDS.md  ROBUSTNESS_ENHANCEMENT_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SDLC_OPTIMIZATION_SUMMARY.md  SECURITY.md  SETUP_GUIDE.md  (+55 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_optimization.yml  privacy_concern.yml  security_vulnerability.yml
.github/workflows/: ci.yml  terragon-autonomous.yml
.terragon/: backlog-engine.py  config.yaml  generate-backlog-md.py  value-metrics.json
autonomous_research_results/: autonomous_research_auto_research_1755721155.json  publication_materials.json  research_summary.md
config/: haproxy.cfg  privacy_example.yaml  security.yaml
demo_recovery_checkpoints/: 0d1bad41a6f25e45.json  0d1bad41a6f25e45.pkl  145e54d71c9e40f6.json  145e54d71c9e40f6.pkl  216c5cddf8a04011.json  216c5cddf8a04011.pkl  2a980b4075956bdf.json  2a980b4075956bdf.pkl  377c2cbfbc8056fb.json  377c2cbfbc8056fb.pkl  3aa9948fb0b7be43.json  3aa9948fb0b7be43.pkl  3ae4438099e007a5.json  3ae4438099e007a5.pkl  3aece0cc8619ba73.json  3aece0cc8619ba73.pkl  4cdd4b6dbee016af.json  4cdd4b6dbee016af.pkl  4ef7972bc7b4590e.json  4ef7972bc7b4590e.pkl  51f8471455413b2d.json  51f8471455413b2d.pkl  55b79b31cb928978.json  55b79b31cb928978.pkl  57f06c8d902c6095.json  57f06c8d902c6095.pkl  5e4037646a5072dd.json  5e4037646a5072dd.pkl  60431e87a74a3bd2.json  60431e87a74a3bd2.pkl  64b5736ffae211f3.json  64b5736ffae211f3.pkl  74253fe13269c3bf.json  74253fe13269c3bf.pkl  80e4d25b2330371a.json  80e4d25b2330371a.pkl  864690f78d139f2b.json  864690f78d139f2b.pkl  8911f58e4d7a4f16.json  8911f58e4d7a4f16.pkl  (+28 more)
deployment/: global_production_orchestrator.py  production_config.yaml  quantum_edge_cloud_orchestrator.py
deployment/docker/: Dockerfile.production  entrypoint.sh  healthcheck.py
docs/: ADVANCED_DEVELOPMENT_GUIDE.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md  ROADMAP.md  SETUP_REQUIRED.md  ci-cd-workflows.md
docs/adr/: 001-differential-privacy-framework.md  002-federated-learning-architecture.md  003-context-protection-strategies.md  README.md  adr-template.md
docs/deployment/: BUILD.md
docs/guides/: README.md  basic-config.md  first-training.md  installation.md
docs/monitoring/: README.md
docs/testing/: README.md
docs/workflows/: GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_GUIDE.md  README.md  TERRAGON_WORKFLOWS_SETUP.md
examples/: advanced_scaling.py  autonomous_generation2_robustness_demo.py  autonomous_research_generation1_enhanced.py  basic_training.py  generation1_enhanced_demo.py  generation2_demo.py  generation2_enhanced_demo.py  generation3_demo.py  global_first_demo.py  privacy_tradeoff_demo.py  quality_gates_demo.py  research_demo.py
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  loki-config.yml  privacy-alerts.yml  prometheus.yml  promtail-config.yml  telegraf.conf
privacy_finetuner/: __init__.py  budget.py  cli.py  cli_enhanced.py  context_guard.py  core.py  dataset.py  federated.py  privacy.py  report.py  trainer.py
privacy_finetuner/api/: __init__.py  server.py
privacy_finetuner/benchmarks/: benchmark_suite.py
privacy_finetuner/cache/: __init__.py  manager.py  model_cache.py  strategies.py
privacy_finetuner/core/: __init__.py  adaptive_privacy_scheduler.py  circuit_breaker.py  context_guard.py  enhanced_privacy_validator.py  error_recovery.py  exceptions.py  fault_tolerance.py  privacy_analytics.py  privacy_config.py  quantum_optimizer.py  quantum_optimizer_stub.py  resource_manager.py  resource_manager_stub.py  robust_training.py  scaling_optimizer.py  trainer.py  validation.py
privacy_finetuner/database/: __init__.py  advanced_operations.py  connection.py  models.py  query_optimizer.py  repositories.py
privacy_finetuner/deployment/: README.md  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  persistent-volumes.yaml  (+3 more)
quality_results/: comprehensive_test_report.json
quality_validation_results/: quality_validation_quality_validation_1755721320.json  quality_validation_quality_validation_1755721329.json  quality_validation_summary.md
recovery_checkpoints/: 12d98007383a0cd3.json  12d98007383a0cd3.pkl  7366835b2ed2cd07.json  7366835b2ed2cd07.pkl  8cdf83a3eef3111a.json  8cdf83a3eef3111a.pkl  c21068b7af2f74a8.json  c21068b7af2f74a8.pkl
scripts/: advanced_security_scanner.py  build.sh  build_sbom.py  collect_metrics.py  compliance_audit.py  generate_sbom.py  init-db.sql  jupyter-startup.sh  performance_profiler.py  privacy_compliance_check.py  release.py  repository_health_check.py  security_audit.py  start-monitoring.sh  start-production.sh
tests/: README.md  conftest.py  test_advanced_features.py  test_budget.py  test_core.py  test_dataset.py  test_federated.py  test_privacy_guarantees.py  test_report.py  test_trainer.py
(+141 files in other folders)
